<resources>
    <string name="app_name">Zerohour</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_invite">Invite</string>
    <string name="nav_item_maid_status">Maid Status</string>
    <string name="nav_item_alien_car">Alien Car</string>
    <string name="nav_item_notice_board">Notice Board</string>
    <string name="nav_item_complaints">Complaints</string>
    <string name="nav_item_emergency">Emergency</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_invite</item>
        <item>@string/nav_item_maid_status</item>
        <item>@string/nav_item_alien_car</item>
        <item>@string/nav_item_notice_board</item>
        <item>@string/nav_item_complaints</item>
        <item>@string/nav_item_emergency</item>
    </string-array>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="party_invite">Party Invite</string>
    <string name="event_invite">Event Invite</string>
    <string name="invite_history">Invite History</string>
    <string name="numbers">0123456789</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="date_of_party_hint">Date</string>
    <string name="time_for_party_hint">Time</string>
    <string name="place_of_the_party_hint">Place of the party</string>
    <string name="petition">Petition</string>
    <string name="submit">Submit</string>
    <string name="purpose">Invite Note</string>
    <string name="selected_contacts_list">Selected Contacts list</string>
    <string name="current_location">Current location</string>

    <string name="contact_image">&#xE0BA;</string>
    <string name="add_image">&#xE148;</string>
    <string name="date_image">&#xE916;</string>
    <string name="time_image">&#xE192;</string>
    <string name="remove_image">&#xE15D;</string>
    <string name="more_image">&#xE619;</string>
    <string name="place_of_marker">&#xE55F;</string>
    <string name="cake_image">&#xE7E9;</string>
    <string name="face_image">&#xE87C;</string>
    <string name="call_image">&#xE0B1;</string>
    .
    <string name="panic_image">&#xf188;</string>
    <string name="fire_image">&#xf06d;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="message">Chakravarthi Inviting you for</string>
    <string name="send_invitation">Send Invitation</string>

    <!--MaidStatus-->
    <string name="name">Maid Name\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="status">Maid Status\u0020\u0020\u0020\u0020\u0020</string>
    <string name="lakshmi">:  Lakshmi</string>
    <string name="in">:  In</string>
    <string name="entered_time_value">:  07.00 AM</string>
    <string name="entered_time">Entered Time\u0020\u0020\u0020</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_value">: 7799920206</string>

    <!-- Alien Car-->
    <string name="blocking_car_number">Blocking car number</string>
    <string name="get_details">Get Details</string>

    <string name="select_category">Select Category</string>
    <string name="write_your_complaint">Write your complaint</string>
    <string name="drop_complaint">Drop complaint</string>

    <string name="panic">Panic</string>
    <string name="fire">Fire/Gas</string>
    <string name="chakravarthi">Chakravarthi</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_icon">&#xE88A;</string>
    <string name="party_icon">&#xE7FA;</string>
    <string name="maid_icon">&#xE87C;</string>
    <string name="alien_car_icon">&#xE531;</string>
    <string name="notice_icon">&#xE85D;</string>
    <string name="complaints_icon">&#xE896;</string>
    <string name="emergency_icon">&#xEB3C;</string>
    <string name="search_icon">&#xE8B6;</string>

    <string name="select_contact">Select Contacts</string>
    <string name="search">Search</string>

    <string name="may">May</string>
    <string name="date_hint">23</string>
    <string name="contacts">Contacts...</string>
    <string name="plumbing">Plumbing</string>
    <string name="electrical">Electrical</string>
    <string name="general">General</string>

</resources>
