<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="@dimen/_90dp"
        android:layout_height="@dimen/_90dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_5dp"
        android:background="@drawable/bg_circle"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/may"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3dp"
            android:text="@string/date_hint"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_purpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_layout"
        android:layout_marginLeft="@dimen/_3dp"
        android:layout_marginStart="@dimen/_3dp"
        android:layout_marginTop="@dimen/_5dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/_17sp" />


    <LinearLayout
        android:id="@+id/ll_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_mobile_number"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:digits="@string/numbers"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/mobile_number_hint"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_25sp" />

        <TextView
            android:id="@+id/tv_contacts_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10dp"
            android:text="@string/contact_image"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1px"
        android:layout_above="@id/ll_mobile_number"
        android:background="@color/colorPrimary" />
</RelativeLayout>
