<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_100dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="@dimen/_90dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_5dp"
        android:background="@drawable/bg_circle"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/may"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3dp"
            android:text="@string/date_hint"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_purpose"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/_3dp"
            android:layout_marginStart="@dimen/_3dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="@dimen/_17sp" />

        <TextView
            android:id="@+id/tv_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_3dp"
            android:layout_marginStart="@dimen/_3dp"
            android:layout_marginTop="@dimen/_5dp"
            android:gravity="right"
            android:text="@string/contacts"
            android:textSize="@dimen/_17sp" />
    </LinearLayout>
</LinearLayout>
