<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_mobile_number"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:digits="@string/numbers"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:hint="@string/mobile_number_hint"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_25sp" />

                <TextView
                    android:id="@+id/tv_contacts_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_10dp"
                    android:text="@string/contact_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_25sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1px"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:digits="@string/numbers"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_vertical"
                    android:hint="@string/date_of_party_hint"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_10dp"
                    android:text="@string/date_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_25sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1px"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_time"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:digits="@string/numbers"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_vertical"
                    android:hint="@string/time_for_party_hint"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_10dp"
                    android:text="@string/time_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_25sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1px"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_current_location"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_vertical"
                    android:hint="@string/place_of_the_party_hint"
                    android:maxLines="1"
                    android:text="@string/current_location"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_current_location_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_10dp"
                    android:text="@string/place_of_marker"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_25sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1px"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_reason"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/purpose"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_et_reason_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_10dp"
                    android:text="@string/cake_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_25sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1px"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/ll_first_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/_10dp"
                android:paddingStart="@dimen/_10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_first_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18sp" />

                <TextView
                    android:id="@+id/tv_first_contact_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_50dp"
                    android:layout_marginStart="@dimen/_50dp"
                    android:gravity="center"
                    android:text="@string/remove_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_second_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/_10dp"
                android:paddingStart="@dimen/_10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_second_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18sp" />

                <TextView
                    android:id="@+id/tv_first_second_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_50dp"
                    android:layout_marginStart="@dimen/_50dp"
                    android:gravity="center"
                    android:text="@string/remove_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_25sp" />

                <TextView
                    android:id="@+id/tv_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_50dp"
                    android:gravity="center"
                    android:text="@string/more_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_25sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="@dimen/_50dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_18sp" />
</LinearLayout>
