<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:minHeight="@dimen/_40dp"
        android:text="@string/select_contact"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:maxLines="1"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_et_search_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10dp"
            android:paddingStart="@dimen/_10dp"
            android:text="@string/search_icon"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1px"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp"
        android:background="@color/colorPrimary" />

    <ListView
        android:id="@+id/ll_contacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:minHeight="@dimen/_40dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_17sp" />

</LinearLayout>